@@ -19,7 +19,8 @@
    work at the same time (Matthew Gabeler-Lee).
  - xtext: fix redraw when new additions not on current page.
  - win32: Added /set identd 0 switch to turn off built-in identd. 
- - 
+ - Added 6-8 for perl's IRC::get_info to retreive network, host and
+   topic (Ryan).
  - 
  - 
 
